language_tests/source_files/valid/sync_spawn_main.tr
func main() {
    std.print("hello\n")

    let _ = std.task.spawn(|| async {
        std.print("world\n")
    })
}
