language_tests/source_files/invalid/sprintf_bad_specifier_literal.tr
func main() {
    let _ = sprintf("%q", 1)
}
